--- a/notebooks/readcal_new.ipynb
+++ b/notebooks/readcal_new.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')\n",
+    "sys.path.append('../src/')\n",
     "\n",
     "from ALMAQueryCal import *\n",
     "\n",
