--- a/notebooks/alma_database_query.ipynb
+++ b/notebooks/alma_database_query.ipynb
@@ -316,7 +316,8 @@
    },
    "outputs": [],
    "source": [
-    "q = databaseQuery()"
+    "q = databaseQuery()\n",
+    "listcal = q.read_calibratorlist(file_listcal, fluxrange=[0.1, 999999])"
    ]
   },
   {
@@ -327,7 +328,7 @@
    },
    "outputs": [],
    "source": [
-    "listcal = q.read_calibratorlist(file_listcal, fluxrange=[0.1, 999999])"
+    "len(listcal)"
    ]
   },
   {
@@ -346,9 +347,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "len(listcal)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -644,7 +643,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "res = q.query_list(listcal, savedb=True, dbname='calibrators_brighterthan_0.1Jy_20180419.db')"
