--- a/notebooks/alma_database_selection.ipynb
+++ b/notebooks/alma_database_selection.ipynb
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### POLALMA"
+    "### POLAMI"
    ]
   },
   {
@@ -275,8 +275,12 @@
    ],
    "source": [
     "q3 = databaseQuery()\n",
-    "report3, resume3 = q3.select_object_from_sqldb(\"calibrators_brighterthan_0.1Jy_20180419.db\", maxFreqRes=999999999, array='12m', \\\n",
-    "        excludeCycle0=True, selectPol=True, minTimeBand={3:0., 6:0., 7:0.}, verbose=True, silent=True)"
+    "report3,resume3 = q3.select_object_from_sqldb(\"calibrators_brighterthan_0.1Jy_20180419.db\",\\\n",
+    "                                               maxFreqRes=999999999, array='12m', \\\n",
+    "                                               excludeCycle0=True, \\\n",
+    "                                               selectPol=True, \\\n",
+    "                                               minTimeBand={3:0., 6:0., 7:0.}, \n",
+    "                                               verbose=True, silent=True)"
    ]
   },
   {
