--- a/notebooks/selecting_source/alma_database_selection9.ipynb
+++ b/notebooks/selecting_source/alma_database_selection9.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -96,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f8548738410>"
+       "<matplotlib.text.Text at 0x7f5a86dd0c90>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -113,7 +113,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAm4AAAEyCAYAAABDDFwCAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHINJREFUeJzt3X+M5Hd93/Hnm1lPcwSUGPt6suy9Lk0tWgopqVcRE2g1\nsCk/GhRbsnoiFfI1JTr+SFPSpgq2Ixe7F7z+o6JppFbyBWgOmQbcGLAVmQZ34xEON3KyB5QDDIGG\nM2fH9h0mNNRCjD28+8d3lix3uzdf787M9/udfT6k03fmu5+ded9n5vCLz+fz/X4iM5EkSVL9vaDq\nAiRJklSOwU2SJKkhDG6SJEkNYXCTJElqCIObJElSQxjcJEmSGsLgJkmS1BAGN0mSpIYwuEmSJDXE\nQtUFTMvll1+eS0tLVZchSZI01smTJ7+ZmfvHtZvb4La0tMT6+nrVZUiSJI0VEY+WaedUqSRJUkMY\n3CRJkhrC4CZJktQQBjdJkqSGMLhJkiQ1hMFNkiSpIQxukiRJDWFwkyRJagiDmyRJ0jb6fVhdLY51\nMLc7J0iSJO1Gvw8rKzAYQLsNa2vQ6VRbkyNukiRJW+j1itA2HBbHXq/qigxukiRJW+p2i5G2Vqs4\ndrtVV+RUqSRJ0pY6nWJ6tNcrQlvV06RgcJMkSdpWp1OPwLbBqVJJkqSGMLhJkiQ1hMFNkiSpIQxu\nkiRJDWFwkyRJagiDmyRJUkMY3CRJkhrC4CZJktQQBjdJkqSGqCS4RcQHIuJsRHxh07mXRMQDEfHV\n0fHSTT+7KSK+FhFfiYg3VlGzJElS1aoacftd4E3nnbsRWMvMq4G10XMi4uXAW4G/P/qd/xoRrdmV\nKkmSVA+VBLfM/BTwrfNOXwscHz0+Dly36fyHM/N7mfl14GvAT8+kUEmSpBqp0xq3A5n5xOjxk8CB\n0eMrgTOb2j02OneBiDgSEesRsX7u3LnpVSpJklSBOgW3H8jMBHIHv3csM5czc3n//v1TqEySJKk6\ndQpuT0XEFQCj49nR+ceBxU3trhqdkyRJ2lPqFNzuAw6PHh8G7t10/q0R8Tci4qXA1cCfVFCfJElS\npRaqeNOI+D2gC1weEY8B7wbuAO6OiLcDjwKHADLzixFxN/Al4DnglzNzWEXdkiRJVaokuGXmL2zz\no5Vt2r8HeM/0KpIkSaq/Ok2VSpIk6SIMbpIkSQ1hcJMkSWoIg5skSVJDGNwkSZIawuAmSZLUEAY3\nSZKkhjC4SZIkNYTBTZIkqSEMbpIkSQ1hcJMkSWoIg5skSVJDGNwkSZIawuAmSZLUEAY3SZKkhjC4\nSZIkNYTBTZIkqSEMbpIkSQ1hcJMkSWoIg5skSVJDGNwkSZIawuAmSZLUEAY3SZKkhjC4SZIkNYTB\nTZIkqSEMbpIkSQ1hcJMkSWoIg5skSVJDGNwkSZIawuAmSZLUEAY3SZI0V/pn+qw+tEr/TL/qUiZu\noeoCJEmSJqV/ps/KB1cYDAe0W23Wblijs9ipuqyJccRNkiTNjd7pHoPhgGEOGQwH9E73qi5pogxu\nkiRpbnSXurRbbVrRot1q013qVl3SRDlVKkmS5kZnscPaDWv0TvfoLnXnapoUDG6SJGnOdBY7cxfY\nNjhVKkmS9qZ+H1ZXi2ND1G7ELSL+DfBLQAKngF8EXgh8BFgCTgOHMvMvKypRkiQ1Xb8PKyswGEC7\nDWtr0Kn/KF2tRtwi4krgXwPLmfkKoAW8FbgRWMvMq4G10XNJkqSd6fWK0DYcFsder+qKSqlVcBtZ\nAPZFxALFSNtfANcCx0c/Pw5cV1FtkiRpHnS7xUhbq1Ucu92qKyqlVlOlmfl4RPxH4BvAd4FPZuYn\nI+JAZj4xavYkcGCr34+II8ARgIMHD86iZEmS1ESdTjE92usVoa0B06RQs+AWEZdSjK69FPg28D8i\n4m2b22RmRkRu9fuZeQw4BrC8vLxlG0mSJKAIaw0JbBvqNlX6s8DXM/NcZj4LfBT4GeCpiLgCYHQ8\nW2GNkiRJlahbcPsG8OqIeGFEBLACPALcBxwetTkM3FtRfZIkSZWp1VRpZj4cEb8PfAZ4DvgsxdTn\ni4C7I+LtwKPAoeqqlCRJqkatghtAZr4bePd5p79HMfomSZK0Z9VtqlSSJEnbMLhJkiQ1hMFNkiSp\nIQxukiRJDWFwkyRJagiDmyRJUkMY3CRJkhrC4CZJkuqh34fV1eKoLdXuBrySJGkP6vdhZQUGA2i3\nYW2tcRvAz4IjbpIkqXq9XhHahsPi2OtVXVEtGdwkSVL1ut1ipK3VKo7dbtUV1ZJTpZIkqXqdTjE9\n2usVoc1p0i0Z3CRJUj10Oga2MZwqlSRJagiDmyRJUkMY3CRJkhrC4CZJktQQBjdJkqSGMLhJkiQ1\nhMFNkiSpIQxukiRJDWFwkyRJagiDmyRJUkMY3CRJkhrC4CZJktQQBjdJkjR9/T6srhZH7dhC1QVI\nkqQ51+/DygoMBtBuw9oadDpVV9VIjrhJkqTp6vWK0DYcFsder+qKGsvgJkmSpqvbLUbaWq3i2O1W\nXVFjOVUqSZKmq9Mppkd7vSK0OU26YwY3SZI0fZ2OgW0CnCqVJElqCIObJElSQxjcJEnSrvTP9Fl9\naJX+Ge/RNm2ucZMkSTvWP9Nn5YMrDIYD2q02azes0Vl0Ldu0OOImSZJ2rHe6x2A4YJhDBsMBvdO9\nqkuaawY3SZK0Y92lLu1Wm1a0aLfadJe6VZc012o3VRoRPw68D3gFkMC/BL4CfARYAk4DhzLzLysq\nUZIkjXQWO6zdsEbvdI/uUtdp0imLzKy6hh8SEceBhzLzfRHRBl4I3Ax8KzPviIgbgUsz810Xe53l\n5eVcX1+fQcWSJEm7ExEnM3N5XLtaTZVGxI8B/xh4P0BmDjLz28C1wPFRs+PAddVUKEmSVJ1aBTfg\npcA54L9FxGcj4n0R8aPAgcx8YtTmSeBAZRVKkqTK9Puwuloc96K6rXFbAP4h8CuZ+XBE/Gfgxs0N\nMjMjYsv53Yg4AhwBOHjw4LRrlSRJM9Tvw8oKDAbFXvVra3tvF626jbg9BjyWmQ+Pnv8+RZB7KiKu\nABgdz271y5l5LDOXM3N5//79MylYkiTNRq9XhLbhsDj2elVXNHu1Cm6Z+SRwJiJeNjq1AnwJuA84\nPDp3GLi3gvIkSVKFut1ipK3VKo7dbtUVzV7dpkoBfgX40OiK0j8HfpEiYN4dEW8HHgUOVVifJEmq\nQKdTTI/2ekVo22vTpFDD4JaZnwO2uhx2Zda1SJKkeul0JhfY+mf6jbv/XO2CmyRJ0rQ1dY/VWq1x\nkyRJmoWm7rFqcJMkSXtOU/dYdapUkiTtOU3dY3VscIuIYWa2ZlGMJEnSrHQWO40JbBvKTJXG1KuQ\nJEnSWGWC23bbSy1NtBJJkiRd1G4uTvjo+Sci4tW7eD1JkiRdxPMObhFxKCLuAF4cEX8vIja/xrHJ\nlSZJkqTNdnJV6aeBHwF+CXgv8LKI+DbwF8B3J1ibJEmSNnnewS0zHwc+GBH/JzM/DRARlwFLwJcn\nW54kSZI2lLqqNCJedv7JjdA2evx0Zp7MzGcmWp0kSZqa/pk+qw+t0j/Tr7oUlTR2xC0zXxARr4yI\nfzY6dRb448wcTrc0SZI0LU3dq3OvKzVVmpmngFMAEXE58JaIuAT4HvDpzPzW9EqUJEmTttVenQa3\n+tvJGrdvAvcCRMQC8DMRsR94IfBwZv7ZZEuUJEmTtrFX58aIW1P26tzrdrtX6cuA1wB/B3gK+NKu\nK5IkSVPX1L0697odB7eI+G3gq8CHM/PrkytJkiTtVr8PvR50u9DZJpM1ca/OvW43I263ZOb/nVgl\nkiRpIvp9WFmBwQDabVhb2z68qVl2vOWVoU2SpHrq9YrQNhwWx16v6oomZ6/fwmS3a9wkSVLNdLvF\nSNvGiFu3W3VFk+EtTHa3ybwkSZqwMiNK/T6srhbHrXQ6xfTo0aPzNU261S1M9hpH3CRJqokyI0pl\n1691OvMT2DZ4CxNH3CRJqo0yI0rzvH5tnI1bmBx93dGZTZPWbU2dI26SJM1I/0z/ovdNKzOiNK/r\n18qa5S1M6rimzuAmSdIMlAkBZW6Ku7F+bdw92rR7ddwWzOAmSdIMlA0BZUaU5nH9Wh3VcU2dwU2S\npBmoYwjQxdVxW7DIzKprmIrl5eVcX1+vugxJkn5g3Bo37V0RcTIzl8e1c8RNkqQZcW9Q7Za3A5Ek\nSWoIg5skSVJDGNwkSZIawuAmSZLUEAY3SZKkhjC4SZIkNYTBTZIkqSEMbpIkSQ1hcJMkSWqIWga3\niGhFxGcj4g9Gz18SEQ9ExFdHx0urrlGSJGnWahncgHcCj2x6fiOwlplXA2uj55Ik1Ua/D6urxVGa\nltrtVRoRVwE/B7wH+Lej09cC3dHj40APeNesa5MkaSv9PqyswGAA7TasrUHHLUk1BXUccfst4NeB\n7286dyAznxg9fhI4sNUvRsSRiFiPiPVz585NuUxJkgq9XhHahsPi2OtVXdHkHPv4Kd74jh7HPn6q\n6lJEzYJbRLwFOJuZJ7drk5kJ5DY/O5aZy5m5vH///mmVKUnSD+l2i5G2Vqs4drtVVzQZxz5+incc\n+gk++Tuv5R2HfsLwVgO1Cm7Aa4Cfj4jTwIeB10fEXcBTEXEFwOh4troSJUn6YZ1OMT169Oh8TZPe\n84mn4bk25AI8d0nxXJWqVXDLzJsy86rMXALeCvxRZr4NuA84PGp2GLi3ohIlSfOmzFUFJdp0OnDT\nTfMT2gCuf/NlsDCAeBYWni2eq1K1uzhhG3cAd0fE24FHgUMV1yNJaoD+mT690z26S106i1skqjJX\nFezhKw+OXPdKuPsU93ziaa5/82XFc1WqtsEtM3sUV4+SmU8DK1XWI0lqlv6ZPisfXGEwHNButVm7\nYe3C8LbVVQXnh7IybebYketeyZHrqq5CG2o1VSpJUmljpi97p3sMhgOGOWQwHNA73buwUZmrCub1\nygM1Um1H3CRJ2laJ6cvuUpd2q/2DEbfuUvfC19m4qqDXKwLZViNpZdpIM2JwkyTVT79/8aBUYvqy\ns9hh7Ya1i69xg+L3xoWxMm2kGTC4SZLqpczFABvTlxtttpm+7Cx2tg9sUgO5xk2SNBklN+vsn+mz\n+tAq/TPbtCuzDcG83jhNGsMRN0nS7pW8ZUapKz1LjqY5fam9yBE3SdLuldyss9SVno6mSdtyxE2S\ntHslR8lKXekJjqZJ2zC4SdJeN+4KzjJNSt4yo/SVnpK2FJlZdQ1Tsby8nOvr61WXIUn1VmJt2h7e\n8UmamYg4mZnL49q5xk2S9rISa9NKLl+TNAMGN0nay0ps5+SOT1J9uMZNkvayEmvT3PFJjVNi3WZT\nucZNkiTNj4YuynSNmyRJ2nvmfFGmwU2SGqrkDlPS3jLnizJd4yZJDdTQ2SBp+uZ8UabBTZIaaKvZ\noC3/+zTHi7Slbc3xzhsGN0lqoFI7TDksJ80dg5skNVCp2aDSw3KSmsLgJkk11D/TH7uf59jZoJIb\nv0tqDoObJM3YuFDWP9Nn5YMrDIYD2q02azes7Wwz9jlfpC3tRQY3SbVVZtSp1OL7GrUpE8p6p3sM\nhgOGOWQwHNA73dtZcIO5XqQt7UUGN0kTV+pCxgkEnFKL72vWpkwo6y51abfaP/i7d5e623SipL3G\nG/BKmqiN7HLLLcVxy5vDlmi0VcC5sFFv/B3Sa9ZmI5S1orVtKOssdli7YY2jrzu682lSSXPJETdJ\nz8u46ctSFzKWaFRq1KnM4vuatdkIZWMvPFjsGNgkXcBN5iWVVmb6stStw0reX2we17hJ0lbKbjJv\ncJNU2upDq9zy4C0Mc0grWhx93VFu+kc3XdBuEmvcJGkvKRvcnCqV9oCyGWncCFfZRfOlLmT0akdJ\net4MblLTjbs6s+SuR2WmQcuuz5IkTYfBTaqzcUNlZW4/0Su361HZe4e5aF6SqmNwk+qqzFBZmasz\nu+V2PfLeYZJUfwY3qa7KDJWVuf1EyV2PnAaVpPozuEl1VWaorGQqK3sdgNOgklRvBjepImOv9Cw9\nVObVmZK0VxjcpAqUvdLTUCZJ2sy9SqUKlNn2UpKk89UquEXEYkQ8GBFfiogvRsQ7R+dfEhEPRMRX\nR8dLq65Vuph+H1ZXt9lgnb9evtZqXfxKT0mSNqvbVOlzwK9l5mci4sXAyYh4APgXwFpm3hERNwI3\nAu+qsE5pW2WmQcsuX5MkabNaBbfMfAJ4YvT4OxHxCHAlcC3QHTU7DvQwuKki47aFKnvDW5evSZKe\nr1oFt80iYgn4KeBh4MAo1AE8CRzY5neOAEcADh48OP0iteeU2Raq7A1vJUl6vmq1xm1DRLwIuAf4\n1cz8q80/y8wEcqvfy8xjmbmcmcv79++fQaXaa7baFup8G9OgR49e5GpRSZJ2oHYjbhFxCUVo+1Bm\nfnR0+qmIuCIzn4iIK4Cz1VWovazstlBOg0qSpqFWwS0iAng/8EhmvnfTj+4DDgN3jI73VlCeNht7\n99j5bOO2UJKkKkUx81gPEfFa4CHgFPD90embKda53Q0cBB4FDmXmty72WsvLy7m+vj7FaufX2HxT\n5rLJeW0jSdIURMTJzFwe165Wa9wy848zMzLzJzPzVaM/92fm05m5kplXZ+bPjgtt2rmN7HLLLcVx\ny/uQlbl77Ly2kSSpQrUKbqpeqexS5u6x89pGkqQK1WqqdJKcKt3GmHnQ0rOFNVp3NvM2kiRNWNmp\nUoNbxcrmhHE3fS31WiVTmdlFkqTZKhvcanVV6V5TdnSrzE1fS71WyVv6eysLSZLqyTVuFSq7Fr7M\nTV8ntjZNkiTVliNuUzRuyrHs1khlbvpa6rXc2VySpEZzjduUlJ4GneUaN0mSVEuucZuycUGq5HKy\n0uvJOoudsXfpd22aJEnzzeC2A2UuFig7DSpJklSWFyfsQJmLBTaWkx096s5JkiRpMhxx24EyFwuA\nU5eSpOkos+5Z88ngtgOdxQ5rN6z5j0aSNHNllutofhncdqjMxQKSJE3aVst1/O/R3uEaN0mSGmRj\nuU4rWhddrqP55IibJEkN4nKdvc3gJklSw7hcZ+9yqlSS5li/D6urxVFS8zniJklzquzWe5KawxE3\nSZpTW229J6nZDG6SNKc2tt5rtdx6T5oXTpVK0pza2Hqv1ytCm9OkUvMZ3CRpjrn1njRfnCqVJElq\nCIObJElSQxjcJEmSGsLgJkmS1BAGN0mSpIYwuEmSJDWEwU2SJKkhDG6SJEkNYXCTJElqCIObJElS\nQxjcJEmSGsLgJkmS1BAGN0mSpIYwuEmSJDWEwU2SJKkhGhPcIuJNEfGViPhaRNxYdT2SJEmz1rr1\n1lurrmGsiGgB/xN4I7AK/PZtt932qVtvvfXcdr9z7NixW48cOTK1mvrHTnHXzY+w8N3vsHjNga3b\nfOIYd33kZhae+S6LV1+z4zaTfL9jHz/Fzf/pEb47/A7X/N3pvs68tpnlZz+xmif5PZvld7HEe9Xt\n+zGx79Ckvmdn+tz1+btYeMECiz+2uPOaJ/SZlv27zbKvZ/nvbFKfPf0+3HUXLCzA4taf66TqKfVe\nM+znUvWMb1K+XdkX26XbbrvtiVtvvfXY2IaZWfs/QAf4w03PbwJuutjvXHPNNTktJ+78fO7jmWzx\nbO7jmTxx5+cvbHP/nbnvN8jWvyf3/QZ54v47d9Rmku9358c+n1zyTBLPJpc8k3d+bHqvM69tZvnZ\nT6zmSX7PZvldLPFedft+TOw7NKnv2TdO5L7f3Jet21q57zf35YlvnNhZzRP6TMv+3WbZ17P8dzap\nzz5PnMjcty+z1SqOJy78XCdVT6n3mmE/l6pnfJPy7cq+2AQA61kiEzVlqvRK4Mym54+Nzv2QiDgS\nEesRsX7u3LaDcbvWu+dpBrQZssCAS+jd8/SFbU7ew6AFwxfA4AXF8520meT73fOJp+G5NuQCPHdJ\n8XxKrzOvbWb52U+s5kl+z2b5XSzxXnX7fkzsOzSp79npHoPhgGEOGQwH9E73dlbzhD7Tsn+3Wfb1\nLP+dTeqzp9eDwQCGw+LY602tnlLvNcN+LlXP+Cbl25V9sRlqSnArJTOPZeZyZi7v379/au/Tvf4y\n2gxo8SxtnqV7/WUXtrnmetpDaA2h/f3i+U7aTPL9rn/zZbAwgHgWFp4tnk/pdea1zSw/+4nVPMnv\n2Sy/iyXeq27fj4l9hyb1PVvq0m61aUWLdqtNd6m7s5on9JmW/bvNsq9n+e9sUp893S6029BqFcdu\nd2r1lHqvGfZzqXrGNynfruyLzVKZYbmq/1CzqdLMYmj49jc8uPXQ8kab++/M24++YdupqbJtJvl+\nd37s8/mGIw9uO40xydeZ1zaz/OwnVvMkv2ez/C6WeK+6fT8m9h2a1PfsGyfy9k/dvuU06fOqeUKf\naeZsP9eZvleZz2NCn32eOJF5++0XnbqbVD2l3muG/VyqnvFNyrcr+2K7RMmp0ija1ltELAB/BqwA\njwN/CvzzzPzidr+zvLyc6+vrM6pQkiRp5yLiZGYuj2u3MItidiszn4uIfwX8IdACPnCx0CZJkjSP\nGhHcADLzfuD+quuQJEmqylxdnCBJkjTPDG6SJEkNYXCTJElqCIObJElSQxjcJEmSGsLgJkmS1BAG\nN0mSpIZoxM4JOxER54BHd/ESlwPfnFA5ujj7ejbs59mxr2fHvp4N+3n6/lZmjt1ofW6D225FxHqZ\nrSe0e/b1bNjPs2Nfz459PRv2c304VSpJktQQBjdJkqSGMLht71jVBewh9vVs2M+zY1/Pjn09G/Zz\nTbjGTZIkqSEccZMkSWoIg5skSVJDGNy2EBFvioivRMTXIuLGquuZJxHxgYg4GxFf2HTuJRHxQER8\ndXS8tMoa50FELEbEgxHxpYj4YkS8c3Tevp6giPiRiPiTiPjfo36+bXTefp6SiGhFxGcj4g9Gz+3r\nKYiI0xFxKiI+FxHro3P2dQ0Y3M4TES3gvwBvBl4O/EJEvLzaqubK7wJvOu/cjcBaZl4NrI2ea3ee\nA34tM18OvBr45dH32L6erO8Br8/MfwC8CnhTRLwa+3ma3gk8sum5fT09r8vMV226f5t9XQMGtwv9\nNPC1zPzzzBwAHwaurbimuZGZnwK+dd7pa4Hjo8fHgetmWtQcyswnMvMzo8ffofgP3ZXY1xOVhf83\nenrJ6E9iP09FRFwF/Bzwvk2n7evZsa9rwOB2oSuBM5uePzY6p+k5kJlPjB4/CRyosph5ExFLwE8B\nD2NfT9xo6u5zwFnggcy0n6fnt4BfB76/6Zx9PR0J/K+IOBkRR0bn7OsaWKi6AGmzzMyI8B41ExIR\nLwLuAX41M/8qIn7wM/t6MjJzCLwqIn4c+FhEvOK8n9vPExARbwHOZubJiOhu1ca+nqjXZubjEfE3\ngQci4subf2hfV8cRtws9Dixuen7V6Jym56mIuAJgdDxbcT1zISIuoQhtH8rMj45O29dTkpnfBh6k\nWMNpP0/ea4Cfj4jTFEtYXh8Rd2FfT0VmPj46ngU+RrGMyL6uAYPbhf4UuDoiXhoRbeCtwH0V1zTv\n7gMOjx4fBu6tsJa5EMXQ2vuBRzLzvZt+ZF9PUETsH420ERH7gH8CfBn7eeIy86bMvCozlyj+d/mP\nMvNt2NcTFxE/GhEv3ngMvAH4AvZ1LbhzwhYi4p9SrKVoAR/IzPdUXNLciIjfA7rA5cBTwLuBjwN3\nAweBR4FDmXn+BQx6HiLitcBDwCn+ej3QzRTr3OzrCYmIn6RYpN2i+D/Cd2fmf4iIy7Cfp2Y0Vfrv\nMvMt9vXkRcTfphhlg2JJ1X/PzPfY1/VgcJMkSWoIp0olSZIawuAmSZLUEAY3SZKkhjC4SZIkNYTB\nTZIkqSEMbpIkSQ1hcJMkSWqI/w/zOzcTe4oxCAAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f8548cbe950>"
+       "<matplotlib.figure.Figure at 0x7f5a86e833d0>"
       ]
      },
      "metadata": {},
@@ -138,14 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List of primary sample: \n",
       "['J1713-3418' 'J0541-0211' 'J1633-2557' 'J1636-4102' 'J0440+2728'\n",
       " 'J0628-6248' 'J1824+0119' 'J0516-6207' 'J0522-6107' 'J0534-6106'\n",
       " 'J0620-6107' 'J0610-6058' 'J0506-6109' 'J0623-6436' 'J0731-2341'\n",
@@ -162,8 +161,58 @@
     }
    ],
    "source": [
-    "print(\"List of primary sample: \")\n",
     "print(res[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# List of nonalmacal sample (primary and secondary)\n",
+    "nonalmacal = ['J0541-0211', 'J1733-3722', 'J1610-3958', 'J1743-0350', 'J2253+1608', \n",
+    "              'J1851+0035', 'J0541-0541', 'J0601-7036', 'J1130-1449', 'J1305-4928',\n",
+    "              'J0336+3218', 'J0006-0623', 'J1717-3342', 'J1833-210B', 'J0237+2848', \n",
+    "              'J0750+1231', 'J1751+0939', 'J0948+0022', 'J1107-4449', 'J1256-0547', \n",
+    "              'J0747-3310', 'J1516+1932', 'J0438+3004', 'J2134-0153', 'J2226+0052', \n",
+    "              'J1830+0619', 'J0426+2327', 'J1626-2951', 'J1225+1253', 'J1058-8003']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of good candidate for colab: \n",
+      "J0541-0211\n",
+      "J1851+0035\n",
+      "J2134-0153\n",
+      "J1717-3342\n",
+      "J0541-0541\n",
+      "J0747-3310\n",
+      "J0750+1231\n",
+      "J1733-3722\n",
+      "J0237+2848\n",
+      "J1225+1253\n",
+      "J0336+3218\n",
+      "J1743-0350\n",
+      "J1256-0547\n",
+      "J1751+0939\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"List of good candidate for colab: \")\n",
+    "for i in res[:,0]:\n",
+    "    if i in nonalmacal:\n",
+    "        print i"
    ]
   },
   {
@@ -172,7 +221,7 @@
    "source": [
     "See the detail of each object in `report_8_pol.txt` + `report_8_nonAlmacal.txt`\n",
     "\n",
-    "J1751+0939 can be the first candidate which is in non-almacal sample and also pol sample."
+    "J1751+0939 can be the first candidate which is in non-almacal sample and also pol sample and has long total integration in 2 bands: 6 and 7"
    ]
   },
   {
