--- a/notebooks/selecting_source/alma_database_selection9.ipynb
+++ b/notebooks/selecting_source/alma_database_selection9.ipynb
@@ -131,9 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The correlation is seen on all plot, however the last plot has better variance (I think).\n",
-    "- we can used this as basis of 'cutting'.\n",
-    "- I make a cutting line in black and magenta (for 20 and 30 sample) which has largest total integration time."
+    "- Many are available only in 1 band"
    ]
   },
   {
