add new notebook

--- a/notebooks/selecting_source/alma_database_selection10.ipynb
+++ b/notebooks/selecting_source/alma_database_selection10.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# What is the most important project that we need to download first?\n",
     "\n",
-    "### what I did is simply counting the occurance of the word (project name) in the report"
+    "### What I did is simply counting the occurance of the word (project name) in the report file"
    ]
   },
   {
