--- a/notebooks/selecting_source/alma_database_selection8.ipynb
+++ b/notebooks/selecting_source/alma_database_selection8.ipynb
@@ -42,20 +42,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of accepted source:  134\n"
-     ]
-    }
-   ],
    "source": [
-    "report, resume = q.select_object_from_sqldb(\"calibrators_brighterthan_0.1Jy_20180419.db\", \\\n",
+    "## report, resume = q.select_object_from_sqldb(\"calibrators_brighterthan_0.1Jy_20180419.db\", \\\n",
     "                                    maxFreqRes=999999999, array='12m', \\\n",
     "                                    excludeCycle0=True, \\\n",
     "                                    selectPol=False, \\\n",
