--- a/notebooks/galaxy_environment/check_the_environment.ipynb
+++ b/notebooks/galaxy_environment/check_the_environment.ipynb
@@ -33,8 +33,8 @@
    },
    "outputs": [],
    "source": [
-    "for obj in objlist:\n",
-    "    ga.conedv_byname()"
+    "# for obj in objlist:\n",
+    "#     ga.conedv_byname()"
    ]
   },
   {
@@ -378,21 +378,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
