--- a/notebooks/galaxy_environment/check_the_environment.ipynb
+++ b/notebooks/galaxy_environment/check_the_environment.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../src/')\n",
+    "sys.path.append('../../src/utils/')\n",
     "\n",
     "from galenv import *\n",
     "\n",
@@ -16,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ga = Galenv()"
