--- a/notebooks/extraction/sourceExtract.ipynb
+++ b/notebooks/extraction/sourceExtract.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,10 +23,12 @@
     "\n",
     "from scipy.stats import sigmaclip\n",
     "from astropy.io import fits\n",
-    "from math import log\n",
+    "from math import *\n",
+    "from sklearn.cluster import KMeans\n",
+    "from scipy.spatial import distance_matrix\n",
     "\n",
     "## Constants\n",
-    "BEAMARCSEC= 3600."
+    "DEG2ARCSEC= 3600."
    ]
   },
   {
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
     "    ny = int(hdr['NAXIS2'])\n",
     "    bmin = float(hdr['BMIN']) * BEAMARCSEC\n",
     "    bmaj = float(hdr['BMAJ']) * BEAMARCSEC\n",
-    "    ar = math.sqrt(bmin*bmaj)\n",
+    "    ar = sqrt(bmin*bmaj)\n",
     "    lonpole = float(hdr['CRVAL1'])\n",
     "    latpole = float(hdr['CRVAL2'])\n",
     "    \n",
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +175,7 @@
      "output_type": "stream",
      "text": [
       "## Band 3\n",
-      "## Best rms noise for file: ./uid___A002_Xb5bd46_X55ee.ms.split.cal-CALIBRATE_PHASE-J0811-4929.ms.cont4.image.fits (0.078 mJy)\n",
+      "## Best rms noise for file: ./uid___A002_Xb5bd46_X55ee.ms.split.cal-CALIBRATE_PHASE-J0811-4929.ms.cont4.image.fits (0.075 mJy)\n",
       "## Freq: 90.500 GHz\n",
       "  FLUX_MAX  \n",
       "     ct     \n",
@@ -188,7 +190,7 @@
       "0.0002998118\n",
       "\n",
       "## Band 4\n",
-      "## Best rms noise for file: ./uid___A002_Xb55f4e_X36b4.ms.split.cal-CALIBRATE_PHASE-J0811-4929.ms.cont4.image.fits (0.072 mJy)\n",
+      "## Best rms noise for file: ./uid___A002_Xb55f4e_X36b4.ms.split.cal-CALIBRATE_PHASE-J0811-4929.ms.cont4.image.fits (0.070 mJy)\n",
       "## Freq: 138.000 GHz\n",
       "  FLUX_MAX  \n",
       "     ct     \n",
@@ -350,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -385,12 +387,13 @@
     "plt.loglog(fre6,flux6,\"r+\")\n",
     "plt.loglog(fre7,flux7,\"r+\")\n",
     "plt.loglog(fre8,flux8,\"r+\")\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,19 +407,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## find counterparts\n",
+    "##  \n",
+    "## ra, dec: array of all sources\n",
+    "## label: each source should have a different label\n",
+    "## \n",
+    "\n",
+    "class ctrprt:\n",
+    "    \n",
+    "    def __init__(self, ra, dec, label):\n",
+    "        self.ra= ra\n",
+    "        self.dec= dec\n",
+    "        self.label= label\n",
+    "        \n",
+    "    def setFlux(self, flux):\n",
+    "        self.flux= flux\n",
+    "              \n",
+    "    def findCounterparts(self, tolerance= 0.2):\n",
+    "        K= []\n",
+    "        \n",
+    "        for i in range(len(self.ra)):\n",
+    "            K.append([self.ra[i], self.dec[i]])\n",
+    "            \n",
+    "            dist= distance_matrix(K, K)\n",
+    "        \n",
+    "        print(dist[1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1.000000000000001\n"
+      "0.00419324691974858\n"
      ]
     }
    ],
    "source": [
-    "print(spectralIndex([100.,200.],[2., 1.]))"
+    "t = ctrprt(ra3,dec3,dec3)\n",
+    "t.findCounterparts()\n"
    ]
   }
  ],
