add source pairing using networkx

--- a/notebooks/extraction/sourceExtract.ipynb
+++ b/notebooks/extraction/sourceExtract.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,8 @@
     "from math import *\n",
     "from sklearn.cluster import KMeans\n",
     "from scipy.spatial import distance_matrix\n",
+    "\n",
+    "import networkx as nx\n",
     "\n",
     "## Constants\n",
     "DEG2ARCSEC= 3600."
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +76,14 @@
     "    hdr = hdulist[0].header\n",
     "    nx = int(hdr['NAXIS1'])\n",
     "    ny = int(hdr['NAXIS2'])\n",
-    "    bmin = float(hdr['BMIN']) * BEAMARCSEC\n",
-    "    bmaj = float(hdr['BMAJ']) * BEAMARCSEC\n",
+    "    bmin = float(hdr['BMIN']) * DEG2ARCSEC\n",
+    "    bmaj = float(hdr['BMAJ']) * DEG2ARCSEC\n",
     "    ar = sqrt(bmin*bmaj)\n",
     "    lonpole = float(hdr['CRVAL1'])\n",
     "    latpole = float(hdr['CRVAL2'])\n",
     "    \n",
     "    freq = float(hdr['RESTFRQ']) / 1e9     ### frequency in GHz\n",
-    "    dx = abs(float(hdr['CDELT1'])) * BEAMARCSEC ## dx in arcsec\n",
+    "    dx = abs(float(hdr['CDELT1'])) * DEG2ARCSEC ## dx in arcsec\n",
     "    \n",
     "    return(freq)\n",
     "\n",
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +177,7 @@
      "output_type": "stream",
      "text": [
       "## Band 3\n",
-      "## Best rms noise for file: ./uid___A002_Xb5bd46_X55ee.ms.split.cal-CALIBRATE_PHASE-J0811-4929.ms.cont4.image.fits (0.075 mJy)\n",
+      "## Best rms noise for file: ./uid___A002_Xb5bd46_X55ee.ms.split.cal-CALIBRATE_PHASE-J0811-4929.ms.cont4.image.fits (0.078 mJy)\n",
       "## Freq: 90.500 GHz\n",
       "  FLUX_MAX  \n",
       "     ct     \n",
@@ -190,7 +192,7 @@
       "0.0002998118\n",
       "\n",
       "## Band 4\n",
-      "## Best rms noise for file: ./uid___A002_Xb55f4e_X36b4.ms.split.cal-CALIBRATE_PHASE-J0811-4929.ms.cont4.image.fits (0.070 mJy)\n",
+      "## Best rms noise for file: ./uid___A002_Xb55f4e_X36b4.ms.split.cal-CALIBRATE_PHASE-J0811-4929.ms.cont4.image.fits (0.071 mJy)\n",
       "## Freq: 138.000 GHz\n",
       "  FLUX_MAX  \n",
       "     ct     \n",
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,33 +429,103 @@
     "    def setFlux(self, flux):\n",
     "        self.flux= flux\n",
     "              \n",
-    "    def findCounterparts(self, tolerance= 0.2):\n",
+    "    def getGraphSource(self, tolerance= 0.5):\n",
     "        K= []\n",
+    "        G=nx.Graph()\n",
+    "        tolerance /= DEG2ARCSEC\n",
     "        \n",
     "        for i in range(len(self.ra)):\n",
     "            K.append([self.ra[i], self.dec[i]])\n",
-    "            \n",
+    "            G.add_node(i)\n",
     "            dist= distance_matrix(K, K)\n",
     "        \n",
-    "        print(dist[1,2])"
+    "        \n",
+    "        pair= []\n",
+    "        for i in range(len(self.ra)):\n",
+    "            for j in range(i):\n",
+    "                if dist[i,j] < tolerance and self.label[i] != self.label[j]:\n",
+    "                    G.add_edge(i,j, weight= dist[i,j])\n",
+    "                    \n",
+    "        ## removing isolated nodes (detections)\n",
+    "        isol= list(nx.isolates(G))\n",
+    "        G.remove_nodes_from(list(nx.isolates(G)))\n",
+    "        \n",
+    "        return(G , isol)\n",
+    "    \n",
+    "    \n",
+    "    def getMultipleDetection(self, G):\n",
+    "        pass\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.00419324691974858\n"
+      "[4, 10, 11, 16]\n",
+      "[16, 10, 11]\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "t = ctrprt(ra3,dec3,dec3)\n",
-    "t.findCounterparts()\n"
+    "ra= []\n",
+    "dec= []\n",
+    "label=[]\n",
+    "flux=[]\n",
+    "frequency=[]\n",
+    "\n",
+    "for d in ra3:\n",
+    "    ra.append(d)\n",
+    "    label.append(\"B3\")\n",
+    "    frequency.append(freq3)\n",
+    "for d in ra6:\n",
+    "    ra.append(d)\n",
+    "    label.append(\"B6\")\n",
+    "    frequency.append(freq6)\n",
+    "for d in ra7:\n",
+    "    ra.append(d)\n",
+    "    label.append(\"B7\")\n",
+    "    frequency.append(freq7)  \n",
+    "for d in ra8:\n",
+    "    ra.append(d)\n",
+    "    label.append(\"B8\")\n",
+    "    frequency.append(freq8) \n",
+    "    \n",
+    "for d in dec3:\n",
+    "    dec.append(d)\n",
+    "for d in dec6:\n",
+    "    dec.append(d)   \n",
+    "for d in dec7:\n",
+    "    dec.append(d)\n",
+    "for d in dec8:\n",
+    "    dec.append(d)\n",
+    "    \n",
+    "for d in flux3:\n",
+    "    flux.append(d)\n",
+    "for d in flux6:\n",
+    "    flux.append(d)   \n",
+    "for d in flux7:\n",
+    "    flux.append(d)\n",
+    "for d in flux8:\n",
+    "    flux.append(d)    \n",
+    "\n",
+    "    \n",
+    "t = ctrprt(ra,dec,label)\n",
+    "g, isol= t.getGraphSource(0.1)\n",
+    "\n",
+    "\n",
+    "# g.remove_node(2)\n",
+    "print(list(g.nodes))\n",
+    "\n",
+    "## all nodes reachable from one node (same source)\n",
+    "print(list(nx.descendants(g,4)))\n",
+    "print(len(nx.descendants(g,4)))\n"
    ]
   }
  ],
